<resources>
    <string name="app_name">CaltrainAlarmClock</string>
    <string name="home_header">Choose Your Destination</string>
    <string-array name="station_list">
        <item>San Francisco</item>
        <item>22nd Street</item>
        <item>Bayshore</item>
        <item>South San Francisco</item>
        <item>San Bruno</item>
        <item>Millbrae</item>
        <item>Broadway</item>
        <item>Burlingame</item>
        <item>San Mateo</item>
        <item>Hayward Park</item>
        <item>Hillsdale</item>
        <item>Belmont</item>
        <item>San Carlos</item>
        <item>Redwood City</item>
        <item>Menlo Park</item>
        <item>Palo Alto</item>
        <item>Stanford</item>
        <item>California Ave.</item>
        <item>San Antonio</item>
        <item>Mountain View</item>
        <item>Sunnyvale</item>
        <item>Lawrence</item>
        <item>Santa Clara</item>
        <item>College Park</item>
        <item>San Jose Diridon</item>
        <item>Tamien</item>
        <item>Capitol</item>
        <item>Blossom Hill</item>
        <item>Morgan Hill</item>
        <item>San Martin</item>
        <item>Gilroy</item>
    </string-array>
    <string name="direction_header">Choose Your Direction</string>
    <string name="north">NORTH</string>
    <string name="south">SOUTH</string>
    <string name="to">to</string>
    <string name="stops_header">Set Alarm</string>
    <string name="number_stations_text">\# of stations</string>
    <string name="before">before</string>
    <string name="on">on</string>
    <string name="northbound">North-Bound</string>
    <string name="southbound">South-Bound</string>
    <string name="caltrain">Caltrain</string>
    <string name="stop_formatter_single">%1$s station (%2$s)</string>
    <string name="stop_formatter_plural">%1$s stations (%2$s)</string>
    <string name="alarm_set">Alarm set</string>
    <string name="alarm_off">Alarm off</string>
</resources>
