<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_content_direction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible">

    <ToggleButton
        android:id="@+id/direction_toggle_north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:textOn="@string/north"
        android:textOff="@string/north"
        android:checked="true"
        style="@style/CaltrainAlarmClockTheme.ToggleButton" />

    <ToggleButton
        android:id="@+id/direction_toggle_south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/direction_toggle_north"
        android:layout_centerHorizontal="true"
        android:textOn="@string/south"
        android:textOff="@string/south"
        style="@style/CaltrainAlarmClockTheme.ToggleButton" />

    <TextView
        android:id="@+id/direction_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/direction_toggle_south"
        style="@style/CaltrainAlarmClockTheme.StaticText" />

    <TextView
        android:id="@+id/direction_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/direction_to"
        style="@style/CaltrainAlarmClockTheme.DynamicText" />

</RelativeLayout>