<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/direction_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background_direction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <RelativeLayout
        android:id="@+id/content_direction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:visibility="invisible">

        <ToggleButton
            android:id="@+id/direction_toggle_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:textOn="@string/north"
            android:textOff="@string/north"
            android:checked="true"
            android:background="@drawable/apptheme_btn_toggle_holo_dark" />

        <ToggleButton
            android:id="@+id/direction_toggle_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direction_toggle_north"
            android:layout_centerHorizontal="true"
            android:textOn="@string/south"
            android:textOff="@string/south"
            android:background="@drawable/apptheme_btn_toggle_holo_dark" />

        <TextView
            android:id="@+id/direction_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/direction_toggle_south" />

        <TextView
            android:id="@+id/direction_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/direction_to" />
    </RelativeLayout>
</FrameLayout>